fixed route problems on master branch, Added snake game (not finished yet)

--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -8,7 +8,7 @@
     <a routerLink="/games/blackjack"><mat-grid-tile>Blackjack</mat-grid-tile></a>
     <a routerLink="/games/memory"><mat-grid-tile>Memory</mat-grid-tile></a>
     <a routerLink="/games/higherorlower"><mat-grid-tile>Higher or Lower</mat-grid-tile></a>
-    <mat-grid-tile>EMPTY</mat-grid-tile>
+    <a routerLink="/games/snake"><mat-grid-tile>Snake</mat-grid-tile></a>
   </mat-grid-list>
 </body>
 </html>
