--- a/src/app/tools/PassGen/passgen.component.scss
+++ b/src/app/tools/PassGen/passgen.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../variables.scss";
+@import "../../../variables.scss";
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
