--- a/src/app/tools/PassGen/passgen.component.html
+++ b/src/app/tools/PassGen/passgen.component.html
@@ -7,9 +7,10 @@
       [(ngModel)]="inputLength" 
       min="6" 
       max="30" 
-      (input)="validateInputLength()" 
     />
     <button (click)="generate()">Generate</button>
-    <button (click)="copyToClipboard()"><mat-icon>content_copy</mat-icon></button>
+    <button (click)="copyToClipboard()">
+      <mat-icon>content_copy</mat-icon>
+    </button>
   </div>
 </div>
