--- a/src/app/games/memory/memory.component.scss
+++ b/src/app/games/memory/memory.component.scss
@@ -13,7 +13,7 @@ button, #reset {
   border: none;
   background-color: $primary-color;
   cursor: pointer;
-  transition: transform 0.3s, background-color 0.3s;
+  transition: transform 0.3s, background-color 0.3s, ease-in 0.1s;
   font-size: 20px;
   width: 100px;
   height: 100px;
@@ -29,6 +29,7 @@ button, #reset {
 
 .hidden {
   font-size: 0;
+  transition: ease-out 0.1s;
 }
 
 #reset {
