--- a/src/app/tools/color-converter/color-converter.component.scss
+++ b/src/app/tools/color-converter/color-converter.component.scss
@@ -19,20 +19,10 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 15px;
   padding: 40px;
   text-align: center;
-  height: 100px;
-  width: 450px;
-  border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
-
-  & .passmsg {
-    position: absolute;
-    font-family: $font;
-    color: $text-color;
-    font-size: 20px;
-    margin-bottom: 30px;
-  }
+  width: 600px;
+  border-bottom: solid rgba($primary-color, 0.6);
 
   & .inputs {
-    margin-top: 50px;
     display: flex;
     gap: 15px;
     justify-content: center;
@@ -54,7 +44,39 @@ input[type=number]::-webkit-outer-spin-button {
       }
     }
 
-    & button {
+    & .color {
+      width: 50px;
+      height: 50px;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+  }
+
+  & .hexa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 10px;
+
+    & .hexa-input {
+      width: 150px;
+      padding: 12px;
+      border: 2px solid $primary-color;
+      border-radius: 10px;
+      font-size: 18px;
+      text-align: center;
+      background-color: $background-color-transparent;
+      color: white;
+      transition: border-color 0.3s;
+
+      &:focus {
+        border-color: $button-hover-color;
+        outline: none;
+      }
+    }
+
+    & .copy {
       font-family: $font;
       background-color: $primary-color;
       color: white;
@@ -64,8 +86,9 @@ input[type=number]::-webkit-outer-spin-button {
       cursor: pointer;
       font-size: 16px;
       transition: background-color 0.3s, transform 0.2s;
-      width: 100px;
-
+      width: 50px;
+      height: 50px;
+      
       &:hover {
         background-color: $button-hover-color;
         transform: scale(1.05);
