--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -6,7 +6,7 @@
 <body>
   <mat-grid-list cols="2" rowHeight="2:1">
     <a routerLink="/tools/passgen"><mat-grid-tile>PassGen</mat-grid-tile></a>
-    <mat-grid-tile>EMPTY</mat-grid-tile>
+    <a routerLink="/tools/colorconverter"><mat-grid-tile>Color Converter</mat-grid-tile></a>
     <mat-grid-tile>EMPTY</mat-grid-tile>
     <mat-grid-tile>EMPTY</mat-grid-tile>
   </mat-grid-list>
