--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,4 +29,21 @@
     </a>
   </div>
 </header>
-<router-outlet></router-outlet>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<footer>
+  <div class="text">
+    <span>© MiniGaT, 2024 -</span>
+    <div class="github">
+      <a href="https://github.com/JaronHel/MiniGaT">
+        <img src="github-mark.png" alt="GitHub Mark" class="github-mark">
+      </a>
+      <a href="https://github.com/JaronHel/MiniGaT">
+        <img src="GitHub_Logo.png" alt="GitHub Logo" class="github-logo">
+      </a>
+    </div>
+  </div>
+</footer>
