footer fixed with adjustments additionaly with some position styling of some components

--- a/src/app/games/blackjack/blackjack.component.html
+++ b/src/app/games/blackjack/blackjack.component.html
@@ -1,23 +1,25 @@
-<div id="actions">
-    <button (click)="onHit()" [disabled]="btnHitDisabled">Hit</button>
-    <button (click)="onStand()" [disabled]="btnStandDisabled">Stand</button>
-    <button (click)="onNewGame()" [disabled]="btnNewDisabled">New Game</button>
-</div>
-
-<div id="game">
-    <div id="cardValues">
-        <div id="dealerHand">
-            Dealer:
-            <span *ngIf="dealerHandHidden">?, {{ dealerHand[1] }}</span>
-            <span *ngIf="!dealerHandHidden">{{ dealerHand.join(', ') }} ({{ calculateHandValue(dealerHand) }})</span>
-        </div>
-        
-        <div id="playerHand">
-            You: {{ playerHand.join(', ') }} ({{ calculateHandValue(playerHand) }})
-        </div>
+<div class="main">
+    <div id="actions">
+        <button (click)="onHit()" [disabled]="btnHitDisabled">Hit</button>
+        <button (click)="onStand()" [disabled]="btnStandDisabled">Stand</button>
+        <button (click)="onNewGame()" [disabled]="btnNewDisabled">New Game</button>
     </div>
-
-    <div id="messages">
-        <div id="msgWinner">{{ message }}</div>
+    
+    <div id="game">
+        <div id="cardValues">
+            <div id="dealerHand">
+                Dealer:
+                <span *ngIf="dealerHandHidden">?, {{ dealerHand[1] }}</span>
+                <span *ngIf="!dealerHandHidden">{{ dealerHand.join(', ') }} ({{ calculateHandValue(dealerHand) }})</span>
+            </div>
+            
+            <div id="playerHand">
+                You: {{ playerHand.join(', ') }} ({{ calculateHandValue(playerHand) }})
+            </div>
+        </div>
+    
+        <div id="messages">
+            <div id="msgWinner">{{ message }}</div>
+        </div>
     </div>
 </div>
