--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
 
 <footer>
   <div class="text">
-    <span>© MiniGaT, 2024 -</span>
+    <span>© MiniGaT 2024 -</span>
     <div class="github">
       <a href="https://github.com/JaronHel/MiniGaT">
         <img src="github-mark.png" alt="GitHub Mark" class="github-mark">
