--- a/src/app/games/blackjack/blackjack.component.scss
+++ b/src/app/games/blackjack/blackjack.component.scss
@@ -1,76 +1,87 @@
 @import '../../../variables.scss';
 
-.hidden {
-  display: none;
-}
-
-#actions {
+.main {
+  position: absolute;
   display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
+  align-items: center;
+  flex-direction: column;
+  left: 50%;
+  transform: translate(-50%, 180%);
 
-  button {
-    font-family: $font;
-    background-color: $primary-color;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 12px 0;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s, transform 0.2s;
-    width: 100px;
-
-    &:hover {
-      background-color: $button-hover-color;
-      transform: scale(1.05);
-    }
-
-    &:disabled {
-      background-color: #ccc;
-      cursor: not-allowed;
-      transform: scale(1);
+  & .hidden {
+    display: none;
+  }
+  
+  & #actions {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+  
+    button {
+      font-family: $font;
+      background-color: $primary-color;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      padding: 12px 0;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s, transform 0.2s;
+      width: 100px;
+  
+      &:hover {
+        background-color: $button-hover-color;
+        transform: scale(1.05);
+      }
+  
+      &:disabled {
+        background-color: #ccc;
+        cursor: not-allowed;
+        transform: scale(1);
+      }
     }
   }
-}
-
-#game {
-  position: relative;
-  text-align: center;
-  margin-top: 20px;
-}
-
-#cardValues {
-  font-family: $font;
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin: 20px 0;
-  color: #fff;
-
-  #dealerHand,
-  #playerHand {
-    font-size: 14px;
-    padding: 10px;
-    background-color: rgba(255, 255, 255, 0.1);
-    border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
-    border-radius: 15px;
-    width: 300px;
+  
+  & #game {
+    position: relative;
     text-align: center;
-    flex: 1;
+    margin-top: 20px;
   }
-}
-
-#messages {
-  font-family: $font;
-  text-align: center;
-  margin-top: 20px;
-  font-size: 20px;
-
-  #msgWinner {
-    margin-top: 10px;
-    font-weight: bold;
-    color: #ffcc00;
+  
+  & #cardValues {
+    font-family: $font;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin: 20px 0;
+    color: #fff;
+  
+    #dealerHand,
+    #playerHand {
+      font-size: 14px;
+      padding: 10px;
+      background-color: rgba(255, 255, 255, 0.1);
+      border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
+      border-radius: 15px;
+      width: 300px;
+      text-align: center;
+      flex: 1;
+    }
+  }
+  
+  & #messages {
+    position: absolute;
+    font-family: $font;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 20px;
+    left: 50%;
+    transform: translate(-50%, 0);
+  
+    & #msgWinner {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #ffcc00;
+    }
   }
 }
