fixed footer (responsible now), added variables and functions for future blackjack update, added colorpicker to the converter and redesigned it.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       </button>
     </form>
 
-    <a href="">
+    <a href="#">
       <button mat-fab extended class="login-button">
         <mat-icon>login</mat-icon>
         Login
