--- a/src/app/tools/color-converter/color-converter.component.html
+++ b/src/app/tools/color-converter/color-converter.component.html
@@ -3,10 +3,13 @@
     <input type="number" placeholder="Red" min="0" max="255" [(ngModel)]="red" (ngModelChange)="updateColor()">
     <input type="number" placeholder="Green" min="0" max="255" [(ngModel)]="green" (ngModelChange)="updateColor()">
     <input type="number" placeholder="Blue" min="0" max="255" [(ngModel)]="blue" (ngModelChange)="updateColor()">
-    <div class="color" [style.background]="rgbColor" (click)="copyRgb()"></div>
+    <button class="copy" (click)="copyRgb()">
+      <mat-icon>content_copy</mat-icon>
+    </button>
   </div>
   <div class="hexa">
     <input [(ngModel)]="hexa" (ngModelChange)="toRgb()" class="hexa-input">
+    <input type="color" class="color" [(ngModel)]="selectedColor" (change)="onColorPickerChange()">
     <button class="copy" (click)="copyHex()">
       <mat-icon>content_copy</mat-icon>
     </button>
