--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,8 +25,7 @@
 }
 
 main {
-  flex-grow: 1;
-  min-height: 89vh;
+  min-height: 100vh;
 }
 
 header {
@@ -191,9 +190,13 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: rgba($color: $primary-color, $alpha: 0.6);
+  background-color: rgba($primary-color, 0.6);
   color: white;
-  height: auto;
+  width: 100%;
+  height: 45px;
+  position: absolute;
+  bottom: 0;
+  flex-shrink: 0;
 }
 
 .text {
@@ -213,12 +216,12 @@ footer {
   cursor: pointer;
   line-height: 0;
 
-  & .github-logo {
+  .github-logo {
     max-width: 50px;
     height: auto;
   }
 
-  & .github-mark {
+  .github-mark {
     max-width: 25px;
     height: auto;
   }
