--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,64 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the theme object.
+$MiniGaT-theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
+  ),
+  density: (
+    scale: 0,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+:root {
+  @include mat.all-component-themes($MiniGaT-theme);
+}
+
+// Comment out the line below if you want to use the pre-defined typography utility classes.
+// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
+// @include mat.typography-hierarchy($MiniGaT-theme);
+
+// Comment out the line below if you want to use the deprecated `color` inputs.
+// @include mat.color-variants-backwards-compatibility($MiniGaT-theme);
 html, body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	overflow: hidden;
-	position: relative;
 	height: 100%;
-}
-
-.background {
-	position: absolute;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+  }
+  
+  // Hintergrund-Element
+  .background {
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	z-index: -1;
-  	filter: brightness(0.4);
-}
-
-.content {
-	position: relative;
+	filter: brightness(0.4);
+  }
+  
+  // App-Root-Inhalt
+  .content {
+	display: flex;
+	flex-direction: column;
+	flex: 1;
 	z-index: 1;
-}
+  }
