Re-worked blackjack (money system and double function), Fixed positionings, Added new global styling variable, reworked design where it was needed because of the fixed positioning !Build incoming!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
     </form>
 
     <a href="#">
-      <button mat-fab extended class="login-button">
+      <button mat-fab extended class="login-button" [disabled]="LoginDisabled">
         <mat-icon>login</mat-icon>
         Login
       </button>
