--- a/src/app/games/higherorlower/hol.component.html
+++ b/src/app/games/higherorlower/hol.component.html
@@ -1,8 +1,10 @@
 <div class="main">
   <h1>Guess the Number!</h1>
   <input [(ngModel)]="inputValue" type="number" placeholder="Number from 1-100">
-  <button (click)="onCheck()" [disabled]="isCheckButtonDisabled()">Check</button>
-  <button (click)="onNew()">New</button>
+  <div>
+    <button (click)="onCheck()" [disabled]="isCheckButtonDisabled()">Check</button>
+    <button (click)="onNew()">New</button>
+  </div>
   <span id="message" [innerHTML]="message"></span>
   <span id="tries">Tries: {{ tries }}</span>
 </div>
