--- a/src/app/games/higherorlower/hol.component.scss
+++ b/src/app/games/higherorlower/hol.component.scss
@@ -7,9 +7,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 100%);
+  @include position;
   background-color: $background-color-transparent;
   border-radius: 15px;
   padding: 30px;
