--- a/src/app/tools/color-converter/color-converter.component.scss
+++ b/src/app/tools/color-converter/color-converter.component.scss
@@ -7,14 +7,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @include position;
   gap: 30px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: $background-color-transparent;
   border-radius: 15px;
   padding: 40px;
