--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,3 +8,13 @@ $input-background-color: #303030;
 $border-color: #555555;
 $icon-background-color: #404040;
 $font: "Mulish", sans-serif;
+
+@mixin position {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
