Overall style improvements with responsible features

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
   <div class="search-login">
     <form class="search" action="" method="get">
       <input type="text" placeholder="Search..." />
-      <button class="search-button" type="submit">
+      <button class="search-button">
         <span class="material-icons">search</span>
       </button>
     </form>
