--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="2" rowHeight="fit">
   <a routerLink="/games/blackjack"><mat-grid-tile>Blackjack</mat-grid-tile></a>
   <a routerLink="/games/memory"><mat-grid-tile>Memory</mat-grid-tile></a>
   <a routerLink="/games/higherorlower"><mat-grid-tile>Higher or Lower</mat-grid-tile></a>
