--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,4 +1,4 @@
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="2" rowHeight="fit">
   <a routerLink="/tools/passgen"><mat-grid-tile>PassGen</mat-grid-tile></a>
   <a routerLink="/tools/colorconverter"><mat-grid-tile>Color Converter</mat-grid-tile></a>
   <mat-grid-tile>EMPTY</mat-grid-tile>
