--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,7 +28,7 @@ header {
   @include flex-center;
   flex-shrink: 0;
   padding: 18px;
-  background-color: $background-color-transparent;
+  background-color: $background-color;
   color: $text-color;
   position: sticky;
   top: 0;
@@ -189,7 +189,7 @@ header {
 
 main {
   flex-grow: 1;
-  min-height: 100vh;
+  height: calc(100vh - (45px + 73px));
 }
 
 footer {
@@ -197,7 +197,7 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: rgba($primary-color, 0.6);
+  background-color: $primary-color;
   color: white;
   width: 100%;
   height: 45px;
@@ -206,6 +206,7 @@ footer {
   flex-shrink: 0;
 
   & .text {
+    cursor: default;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -214,19 +215,19 @@ footer {
     flex: 1;
     font-family: $font;
   }
-  
+
   & .github {
     display: flex;
     align-items: center;
     gap: 2px;
     cursor: pointer;
     line-height: 0;
-  
+
     .github-logo {
       max-width: 50px;
       height: auto;
     }
-  
+
     .github-mark {
       max-width: 25px;
       height: auto;
