--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -7,7 +6,8 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 // Define the theme object.
 $MiniGaT-theme: mat.define-theme((
@@ -34,6 +34,7 @@ $MiniGaT-theme: mat.define-theme((
 
 // Comment out the line below if you want to use the deprecated `color` inputs.
 // @include mat.color-variants-backwards-compatibility($MiniGaT-theme);
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -41,10 +42,10 @@ html, body {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	overflow: hidden;
-  }
+	overflow-x: hidden;
+}
 
-  .background {
+.background {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -52,11 +53,11 @@ html, body {
 	height: 100%;
 	z-index: -1;
 	filter: brightness(0.4);
-  }
-  
-  .content {
+}
+
+.content {
 	display: flex;
 	flex-direction: column;
 	flex: 1;
 	z-index: 1;
-  }
+}
