--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,7 +42,7 @@ html, body {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 .background {
