--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
       </button>
     </form>
 
-    <a href="#">
+    <a href="">
       <button mat-fab extended class="login-button" [disabled]="LoginDisabled">
         <mat-icon>login</mat-icon>
         Login
