--- a/src/app/tools/PassGen/passgen.component.html
+++ b/src/app/tools/PassGen/passgen.component.html
@@ -1,22 +1,25 @@
 <div class="main">
-  <span class="passmsg">{{ password }}</span>
-  <div class="inputs">
-    <input 
-      type="number" 
-      placeholder="Length" 
-      [(ngModel)]="inputLength" 
-      min="6" 
-      max="30" 
-    />
-    <button (click)="generate()">Generate</button>
-    <button (click)="copyToClipboard()">
-      <mat-icon>content_copy</mat-icon>
-    </button>
+  <div class="main_left">
+    <span class="passmsg">{{ password }}</span>
+    <div class="inputs">
+      <input 
+        type="number" 
+        placeholder="Length" 
+        [(ngModel)]="inputLength" 
+        min="6" 
+        max="30" 
+      />
+      <button (click)="generate()">Generate</button>
+      <button (click)="copyToClipboard()">
+        <mat-icon>content_copy</mat-icon>
+      </button>
+    </div>
   </div>
-  <div class="specs">
-    <mat-checkbox class="checkbox" [(ngModel)]="noCapital"><span class="checkboxLabel">Capital letters</span></mat-checkbox>
-    <mat-checkbox class="checkbox" [(ngModel)]="noLowercase"><span class="checkboxLabel">Lowercase letters</span></mat-checkbox>
-    <mat-checkbox class="checkbox" [(ngModel)]="noDigits"><span class="checkboxLabel">Digits</span></mat-checkbox>
-    <mat-checkbox class="checkbox" [(ngModel)]="noSpecial"><span class="checkboxLabel">Special characters</span></mat-checkbox>
+  
+  <div class="main_right">
+    <mat-checkbox class="checkbox" [(ngModel)]="noCapital">Capital letters</mat-checkbox>
+    <mat-checkbox class="checkbox" [(ngModel)]="noLowercase">Lowercase letters</mat-checkbox>
+    <mat-checkbox class="checkbox" [(ngModel)]="noDigits">Digits</mat-checkbox>
+    <mat-checkbox class="checkbox" [(ngModel)]="noSpecial">Special characters</mat-checkbox>
   </div>
 </div>
