--- a/src/app/tools/PassGen/passgen.component.scss
+++ b/src/app/tools/PassGen/passgen.component.scss
@@ -13,20 +13,19 @@ input[type=number]::-webkit-outer-spin-button {
   border-radius: 15px;
   padding: 40px;
   text-align: center;
-  height: 150px;
-  width: 450px;
+  height: 120px;
+  width: 600px;
   border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
 
   & .passmsg {
-    position: absolute;
+    position: relative;
     font-family: $font;
     color: $text-color;
-    font-size: 20px;
-    margin-bottom: 30px;
+    font-size: 20px; 
   }
 
   & .inputs {
-    margin-top: 50px;
+    margin-top: 10%;
     display: flex;
     gap: 15px;
     justify-content: center;
@@ -67,13 +66,14 @@ input[type=number]::-webkit-outer-spin-button {
     }
   }
 
-  & .specs {
-    margin-top: 20px;
-    display: flex;
-    gap: 30px;
+  & .main_left {
+    margin-right: 35%;
+  }
 
-    & .checkboxLabels {
-      color: #fff;
-    }
+  & .main_right {
+    @include position;
+    margin-left: 32%;
+    text-wrap: nowrap;
+    align-items: flex-start;
   }
 }
