--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@import './variables.scss';
 
 @include mat.elevation-classes();
 @include mat.app-background();
@@ -17,6 +18,10 @@ $MiniGaT-theme: mat.define-theme((
 
 :root {
   @include mat.all-component-themes($MiniGaT-theme);
+  @include mat.checkbox-overrides((
+    label-text-color: #fff,
+	label-text-font: $font,
+  ));
 }
 
 // ----------------------------------------------------------
