--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -1,7 +1,7 @@
 <mat-grid-list cols="2" rowHeight="fit">
   <a routerLink="/tools/passgen"><mat-grid-tile>PassGen</mat-grid-tile></a>
   <a routerLink="/tools/colorconverter"><mat-grid-tile>Color Converter</mat-grid-tile></a>
-  <mat-grid-tile>EMPTY</mat-grid-tile>
+  <a routerLink="/tools/qrgen"><mat-grid-tile>QRGen</mat-grid-tile></a>
   <mat-grid-tile>EMPTY</mat-grid-tile>
   </mat-grid-list>
 <router-outlet></router-outlet>
