--- a/src/app/games/games.component.html
+++ b/src/app/games/games.component.html
@@ -2,6 +2,6 @@
   <a routerLink="/games/blackjack"><mat-grid-tile>Blackjack</mat-grid-tile></a>
   <a routerLink="/games/memory"><mat-grid-tile>Memory</mat-grid-tile></a>
   <a routerLink="/games/higherorlower"><mat-grid-tile>Higher or Lower</mat-grid-tile></a>
-  <a routerLink="/games/roulette"><mat-grid-tile>Roulette</mat-grid-tile></a>
+  <a routerLink=""><mat-grid-tile>EMPTY</mat-grid-tile></a>
 </mat-grid-list>
 <router-outlet></router-outlet>
