--- a/src/app/tools/QRGen/qrgen.component.html
+++ b/src/app/tools/QRGen/qrgen.component.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="linkInput">
-      <input type="url" [(ngModel)]="link">
+      <input type="url" placeholder="URL" [(ngModel)]="link">
     </div>
   </div>
 </div>
