little style rework, added calculator to tools without function yet.

--- a/src/app/tools/tools.component.html
+++ b/src/app/tools/tools.component.html
@@ -2,6 +2,6 @@
   <a routerLink="/tools/passgen"><mat-grid-tile>PassGen</mat-grid-tile></a>
   <a routerLink="/tools/colorconverter"><mat-grid-tile>Color Converter</mat-grid-tile></a>
   <a routerLink="/tools/qrgen"><mat-grid-tile>QRGen</mat-grid-tile></a>
-  <mat-grid-tile>EMPTY</mat-grid-tile>
-  </mat-grid-list>
+  <a routerLink="/tools/calculator"><mat-grid-tile>Calculator</mat-grid-tile></a>
+</mat-grid-list>
 <router-outlet></router-outlet>
