--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,7 +33,7 @@ header {
   position: sticky;
   top: 0;
   z-index: 100;
-  border-bottom: 3px solid rgba($color: $primary-color, $alpha: 0.6);
+  border-bottom: 3px solid $primary-color;
 
   .logo {
     margin-right: 30px;
