--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -28,7 +28,7 @@ header {
   @include flex-center;
   flex-shrink: 0;
   padding: 18px;
-  background-color: $background-color;
+  background-color: $background-color-header;
   color: $text-color;
   position: sticky;
   top: 0;
@@ -197,11 +197,12 @@ footer {
   justify-content: center;
   align-items: center;
   padding: 10px;
-  background-color: $primary-color;
+  background-color: $primary-color-transparent;
   color: white;
   width: 100%;
   height: 45px;
   position: sticky;
+  box-shadow: 0 -1px 15px rgba(0, 0, 0, 0.2);
   bottom: 0;
   flex-shrink: 0;
 
