--- a/src/app/games/higherorlower/hol.component.scss
+++ b/src/app/games/higherorlower/hol.component.scss
@@ -7,13 +7,10 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main {
-  @include position;
-  background-color: $background-color-transparent;
-  border-radius: 15px;
+  @include main-styling;
   padding: 30px;
   text-align: center;
   width: 350px;
-  border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
 }
 
 h1 {
