--- a/src/app/games/memory/memory.component.scss
+++ b/src/app/games/memory/memory.component.scss
@@ -1,13 +1,15 @@
 @import '../../../variables.scss';
 
 .main {
-  @include position;
-  gap: 30px;
+  @include main-styling;
+  gap: 15px;
+  width: 46em;
 
   & #cards {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    gap: 30px;
+    gap: 15px;
+    margin-bottom: 20px;
 
     & button {
       color: $text-color;
@@ -50,9 +52,7 @@
     width: 20%;
     font-size: 30px;
     border-radius: 5px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 20px;
 
     &:hover {
       background-color: rgba($color: $primary-color, $alpha: 0.1);
