--- a/src/app/games/slots/slots.component.scss
+++ b/src/app/games/slots/slots.component.scss
@@ -1,14 +1,9 @@
 @import '../../../variables.scss';
 
 .main {
-  @include position;
-  color: #fff;
-  font-family: $font;
+  @include main-styling;
   width: 80%;
   width: 350px;
-  border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
-  background-color: $background-color-transparent;
-  border-radius: 15px;
   padding: 30px;
   gap: 30px;
 
