--- a/src/app/tools/PassGen/passgen.component.scss
+++ b/src/app/tools/PassGen/passgen.component.scss
@@ -7,15 +7,12 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main {
-  @include position;
+  @include main-styling;
   gap: 10px;
-  background-color: $background-color-transparent;
-  border-radius: 15px;
   padding: 40px;
   text-align: center;
   height: 120px;
   width: 600px;
-  border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
 
   & .passmsg {
     position: relative;
