--- a/src/app/tools/QRGen/qrgen.component.scss
+++ b/src/app/tools/QRGen/qrgen.component.scss
@@ -1,10 +1,8 @@
 @import "../../../variables.scss";
 
 .main {
-  @include position;
+  @include main-styling;
   background-color: $background-color-transparent;
-  border-bottom: solid rgba($color: $primary-color, $alpha: 0.6);
-  border-radius: 15px;
   height: 500px;
   width: 500px;
   text-align: center;
