--- a/src/app/tools/color-converter/color-converter.component.scss
+++ b/src/app/tools/color-converter/color-converter.component.scss
@@ -7,14 +7,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .main {
-  @include position;
+  @include main-styling;
   gap: 30px;
-  background-color: $background-color-transparent;
-  border-radius: 15px;
   padding: 40px;
   text-align: center;
   width: 600px;
-  border-bottom: solid rgba($primary-color, 0.6);
 
   & .inputs, & .hexa {
     display: flex;
