--- a/src/variables.scss
+++ b/src/variables.scss
@@ -32,6 +32,6 @@ $font: "Mulish", sans-serif;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: $background-color-transparent;
-  border: 3px solid $primary-color;
+  border: 3px solid $primary-color-transparent;
   border-radius: 15px;
 }
