hotfix calculator "," not working

--- a/src/app/tools/calculator/calculator.component.html
+++ b/src/app/tools/calculator/calculator.component.html
@@ -26,7 +26,7 @@
     <button (click)="onButton('+')">+</button>
     <button (click)="onClear()">C</button>
     <button (click)="onButton('0')">0</button>
-    <button (click)="onButton(',')">,</button>
+    <button (click)="onButton('.')">,</button>
     <button (click)="onCalculate()">=</button>
   </div>
 </div>
