--- a/src/app/games/slots/slots.component.html
+++ b/src/app/games/slots/slots.component.html
@@ -1,22 +1,22 @@
 <div class="main">
-  <div class="main__money">
+  <div class="money">
     <span>Money: {{ money }}</span>
   </div>
 
-  <div class="main__input">
+  <div class="input">
     <button (click)="onSpin()" [disabled]="btnSpinDisabled">! SPIN !</button>
   </div>
 
-  <div class="main__display">
-    <div class="main__raw main__raw1">
+  <div class="display">
+    <div>
       <span>{{ raw1 }}</span>
     </div>
 
-    <div class="main__raw main__raw2">
+    <div>
       <span>{{ raw2 }}</span>
     </div>
 
-    <div class="main__raw main__raw3">
+    <div>
       <span>{{ raw3 }}</span>
     </div>
   </div>
