--- a/src/app/tools/color-converter/color-converter.component.scss
+++ b/src/app/tools/color-converter/color-converter.component.scss
@@ -65,6 +65,7 @@ input[type=number]::-webkit-outer-spin-button {
       border: none;
       padding: 0;
       background-color: transparent;
+      border-radius: 15px;
     }
   }
 }
