changed file names and updated version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
         <img src="github-mark.png" alt="GitHub Mark" class="github-mark">
       </a>
       <a href="https://github.com/JaronHel/MiniGaT">
-        <img src="GitHub_Logo.png" alt="GitHub Logo" class="github-logo">
+        <img src="github-logo.png" alt="GitHub Logo" class="github-logo">
       </a>
     </div>
   </div>
